# fiinquant-python-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
config/: mcp.codex.example.toml  mcp.cursor.example.json  mcp.example.json  mcp.grok.example.toml  mcp.uvx.example.json  mcp.with-sdk.example.json
docs/: AI_INSTALL_PROMPT.md
plans/20260715-fiinquant-personal-mcp/: brainstorm.md  phase-01-scaffold.md  phase-02-test-gateway.md  phase-03-test-review-gateway.md  phase-04-impl-gateway.md  phase-05-test-tools-p0.md  phase-06-test-review-tools-p0.md  phase-07-impl-tools-p0.md  phase-08-docs-smoke.md  phase-09-p1-expand.md  plan.md  tool-test-report.json
scripts/: inventory_fiinquant_sdk.py
src/fiinquant_mcp/: __init__.py  __main__.py  config.py  errors.py  gateway.py  limits.py  ops.py  response.py  sdk_client.py  server.py
src/fiinquant_mcp/tools/: __init__.py  _common.py  fundamental.py  health.py  market.py  meta.py  parsing.py  screening.py  universe.py
tests/: conftest.py  test_config.py  test_errors.py  test_gateway.py  test_limits.py  test_response.py  test_tools_health.py  test_tools_market.py  test_tools_p1.py  test_tools_universe.py
